--- a/nhttac_consultant_applications_block/nhttac_consultant_applications_block.routing.yml
+++ b/nhttac_consultant_applications_block/nhttac_consultant_applications_block.routing.yml
@@ -1,7 +1,7 @@
 nhttac_consultant_applications_block.description:
   path: '/nhttac/applications'
   defaults:
-    _controller: '\Drupal\nhttac_consultant_applications_block\Controller\NHTTACController::getApplications'
+    _controller: '\Drupal\nhttac_consultant_applications_block\Controller\CAController::getApplications'
     _title: 'NHTTAC Javascript'
   requirements:
     _permission: 'access content'
