--- a/nhttac_consultant_applications_block/nhttac_consultant_applications_block.services.yml
+++ b/nhttac_consultant_applications_block/nhttac_consultant_applications_block.services.yml
@@ -1,4 +1,4 @@
 services:
   nhttac_consultant_applications_block.nhttac_service:
-    class: Drupal\nhttac_consultant_applications_block\Service\NHTTACService
+    class: Drupal\nhttac_consultant_applications_block\Service\CAService
     arguments: []
